# spatial_text

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
spatial_text/: bbox_derivation.py  config.py  data_model.py
spatial_text/geometric/: bbox.py  beta_skeleton.py  iterators.py  layout.py  layout_graph.py  utils.py
spatial_text/layout/: layout.py
spatial_text/spatial/: beta_skeleton.py
spatial_text/text/: edit_distance.py  trie.py
spatial_text/utils/: numeric_strings.py  running_stats.py
tests/: data_model_test.py
tests/geometric/: bbox_test.py  beta_skeleton_test.py  data_model_test.py
tests/spatial/: beta_skeleton_test.py
tests/text/: edit_distance_test.py  trie_test.py
tests/utils/: running_stats_test.py
