[tool.poetry]
name = "spatial_text"
version = "0.1.1"
description = "Common form algorithms"
authors = ["Jadiel de Armas"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
networkx = "^2.8.7"
scipy = "^1.9.2"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]
ipykernel = "*"
pytest = "^6.2.5"
coverage = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Skipping this as this is handled by flake8 during pre-commit-hook
skip-string-normalization = 1
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | models/entity_extraction/entity_extraction/training/ner_trainer.py
)/
'''

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
no_strict_optional = true
plugins = "pydantic.mypy"

[tool.ruff]
# https://beta.ruff.rs/docs/

target-version = "py39"
exclude = ["venv", ".git", ".tox", "poetry.lock"]
select = ["E", "F", "B", "C", "W", "W292", "E402", "E713", "E714", "E721", "E722", "E731", "RET", "SIM", "I", "ERA", "PIE"]

fix = true

#TODO: fix B023
ignore = ["E501", "B904", "B905", "B023", "B008"]



[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.per-file-ignores]
"experiments/*.py" = ["ERA"]

[tool.ruff.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "typer.Option", "typer.Argument", "fastapi.File", "fastapi.Form"]
