[tool.poetry]
name = "spatial_text"
version = "0.1.0"
description = ""
authors = ["Jadiel de Armas <jadielam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
scipy = "^1.9.2"
shapely = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
opencv-python = "^4.8.0.74"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
